Adds a slide for {{each-in}}

--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.4",
     "ember-qunit": "0.3.3",
     "ember-qunit-notifications": "0.0.7",
-    "qunit": "~1.17.1"
+    "qunit": "~1.17.1",
+    "prism": "*"
   }
 }
